--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         </script>
       </div>
     </div>
+    <div class="row-fluid" id="connection-status">
+      <p class="pull-right"><span>Verbindungs Status: </span><i class="icon-circle error"></i><i style="display: none" class="icon-circle info"></i></p>
+    </div>
     <div class="row-fluid" id="message-area"></div>
       <div id="staticpanels">
         <div class="widgetcontainer row-fluid" data-panelid="account" style="display: none">
