--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <link href="css/smoothness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script type="text/javascript">
+    var googleads_desktop = '<scr' + 'ipt async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></scr' + 'ipt>\n<!-- leaderboard -->\n<ins class="adsbygoogle"\n     style="display:inline-block;width:728px;height:90px"\n     data-ad-client="ca-pub-4218787749702756"\n     data-ad-slot="1216452229"></ins>\n<scr' + 'ipt>\n(adsbygoogle = window.adsbygoogle || []).push({});\n</scr' + 'ipt>';
+    var sponsorads_desktop = '<scri' + 'pt type="text/javascript" src="http://www.sponsorads.de/script.php?s=255701"></scr' + 'ipt>';
+    var googleads_mobile = '<scr' + 'ipt async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></scr' + 'ipt><!-- mobil breit --><ins class="adsbygoogle" style="display:inline-block;width:468px;height:60px" data-ad-slot="2185470220"></ins><scr' + 'ipt>(adsbygoogle = window.adsbygoogle || []).push({});</scr' + 'ipt>';
+    var sponsorads_mobile = '<scr' + 'ipt type="text/javascript" src="http://www.sponsorads.de/script.php?s=149748"></scr' + 'ipt>'
+    var rand = Math.random() > 0.8;
+    ads_desktop = rand ? googleads_desktop : sponsorads_desktop;
+    ads_mobile = rand ? googleads_mobile : sponsorads_mobile;
+  </script>
 </head>
 <body>
   <div class="container">
@@ -34,32 +43,20 @@
     <div id="app">
     <div class="row-fluid hidden-desktop" style="text-align: center">
       <div class="span12">
-        <script type="text/javascript"><!--
-        google_ad_client = "ca-pub-4218787749702756";
-        /* mobil breit */
-        google_ad_slot = "2185470220";
-        google_ad_width = 468;
-        google_ad_height = 60;
-        //-->
-        </script>
-        <script type="text/javascript"
-        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-        </script>
+      <script type="text/javascript">
+        //<![CDATA[
+        document.write(ads_mobile);
+        //]]>
+      </script>
       </div>
     </div>
     <div class="row-fluid visible-desktop" style="text-align: center">
       <div class="span12">
-        <script type="text/javascript"><!--
-        google_ad_client = "ca-pub-4218787749702756";
-        /* leaderboard */
-        google_ad_slot = "1216452229";
-        google_ad_width = 728;
-        google_ad_height = 90;
-        //-->
-        </script>
-        <script type="text/javascript"
-        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-        </script>
+      <script type="text/javascript">
+        //<![CDATA[
+        document.write(ads_desktop);
+        //]]>
+      </script>
       </div>
     </div>
     <div class="row-fluid" id="connection-status">
@@ -487,16 +484,14 @@
     });
   </script>
 
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-39804053-1']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-39804053-1', 'auto');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
   </script>
 </body>
 </html>
